--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
     "swr": "^2.2.4"
   },
   "devDependencies": {
