--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "date-fns": "^3.1.0",
     "framer-motion": "^10.17.4",
     "js-cookie": "^3.0.5",
     "next": "14.0.4",
